force-app/main/default/objects/Reclamation_Detail__c/Reclamation_Detail__c.object-meta.xml
<CustomObject>
    <label>Reclamation Detail</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Reclamation Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Reclamation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>