force-app/main/default/objects/Reclamation_Detail__c/fields/ClaimQty__c.field-meta.xml
<CustomField>
    <fullName>ClaimQty__c</fullName>
    <label>Claim Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>