force-app/main/default/objects/Reclamation_Detail__c/fields/ClaimSum__c.field-meta.xml
<CustomField>
    <fullName>ClaimSum__c</fullName>
    <label>Claim Summary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>