force-app/main/default/objects/Reclamation_Detail__c/fields/ID_in_ERP__c.field-meta.xml
<CustomField>
    <fullName>ID_in_ERP__c</fullName>
    <externalId>true</externalId>
    <label>ID in ERP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>