force-app/main/default/objects/Reclamation_Detail__c/fields/ITENumber__c.field-meta.xml
<CustomField>
    <fullName>ITENumber__c</fullName>
    <label>ITE Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>