force-app/main/default/objects/Reclamation_Detail__c/fields/MeasurementUnit__c.field-meta.xml
<CustomField>
    <fullName>MeasurementUnit__c</fullName>
    <label>Measurement Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>t</fullName>
            </value>
            <value>
                <fullName>m</fullName>
            </value>
            <value>
                <fullName>ft</fullName>
            </value>
            <value>
                <fullName>pcs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>