force-app/main/default/objects/Reclamation_Detail__c/fields/MismatchDate__c.field-meta.xml
<CustomField>
    <fullName>MismatchDate__c</fullName>
    <label>Mismatch Date</label>
    <type>Date</type>
</CustomField>