force-app/main/default/objects/Reclamation_Detail__c/fields/Mistmatch_SubType__c.field-meta.xml
<CustomField>
    <fullName>Mistmatch_SubType__c</fullName>
    <label>Mistmatch SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Mistmatch_Type__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>2</fullName>
                <label>geometry</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>defects</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>marking / stamping</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>coating / packaging</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>mechanical damage</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>mechanical properties</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>chemical composition</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>documentation</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>quantity</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>delivery period</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>others</label>
            </value>
            <value>
                <fullName>40</fullName>
                <label>defects after machining</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>simple vehicle</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>delivery period (Logistic)</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>place of delivery (Logistic)</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>mechanical damage (Logistic)</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>marketable condition</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>salt</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>demerge</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>others (Logistic)</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>ordering</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>price</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>documentation (Commercial)</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>others (Commercial)</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Vehicles downtime</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>BWW</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>production planning</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Error in order (planning)</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>technical expertise</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>others (Maintenance)</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>