force-app/main/default/objects/Reclamation_Detail__c/fields/Mistmatch_Type__c.field-meta.xml
<CustomField>
    <fullName>Mistmatch_Type__c</fullName>
    <label>Mistmatch Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Manufacturing</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Logistic</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Commercial</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Maintenance</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Exploitation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>