force-app/main/default/objects/Reclamation_Detail__c/fields/Order_Additional_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Additional_Number__c</fullName>
    <label>Order Additional Number</label>
    <length>150</length>
    <type>Text</type>
</CustomField>