force-app/main/default/objects/Reclamation_Detail__c/fields/OrderID__c.field-meta.xml
<CustomField>
    <fullName>OrderID__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Order Number</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Reclamation Details</relationshipLabel>
    <relationshipName>Reclamation_Details</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>