force-app/main/default/objects/Reclamation_Detail__c/fields/OrderItemID__c.field-meta.xml
<CustomField>
    <fullName>OrderItemID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product Number</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Reclamation Details</relationshipLabel>
    <relationshipName>Reclamation_Details</relationshipName>
    <type>Lookup</type>
</CustomField>