force-app/main/default/objects/Reclamation_Detail__c/fields/OrderPrice__c.field-meta.xml
<CustomField>
    <fullName>OrderPrice__c</fullName>
    <label>Order Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>