force-app/main/default/objects/Reclamation_Detail__c/fields/OrderQty__c.field-meta.xml
<CustomField>
    <fullName>OrderQty__c</fullName>
    <label>Order Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>