force-app/main/default/objects/Reclamation_Detail__c/fields/Prod_ID_in_ERP__c.field-meta.xml
<CustomField>
    <fullName>Prod_ID_in_ERP__c</fullName>
    <label>Prod ID in ERP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>