force-app/main/default/objects/Reclamation_Detail__c/fields/Product2Id__c.field-meta.xml
<CustomField>
    <fullName>Product2Id__c</fullName>
    <label>Product2 Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>