force-app/main/default/objects/Reclamation_Detail__c/fields/ReclID__c.field-meta.xml
<CustomField>
    <fullName>ReclID__c</fullName>
    <label>Reclamation ID</label>
    <referenceTo>Reclamation__c</referenceTo>
    <relationshipLabel>Reclamation Details</relationshipLabel>
    <relationshipName>Reclamation_Details</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>